workshop1/force-app/main/default/objects/Invoice01__c/Invoice01__c.object-meta.xml
<CustomObject>
    <label>Invoice01</label>
    <nameField>
        <displayFormat>INV01-{00000}</displayFormat>
        <label>Invoice01名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>