workshop1/force-app/main/default/objects/Invoice01__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice01</relationshipLabel>
    <relationshipName>Invoice01</relationshipName>
    <type>Lookup</type>
</CustomField>