workshop1/force-app/main/default/objects/Invoice01__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>TEXT(Contact__r.Salutation) + Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>