workshop1/force-app/main/default/objects/Invoice01__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <displayFormat>INV-{00000}</displayFormat>
    <label>Invoice Name</label>
    <type>AutoNumber</type>
</CustomField>